# AdaGram

./: .gitignore  Optimisers.ipynb  README.md  ada_gram.ipynb  get_kron_factors.py  kron_factors_2_0.ipynb  kron_factors_notebook.ipynb  kron_factors_notebook_2 (1).ipynb  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml
notebooks/: Benchmarks.ipynb  PS_check.ipynb  check_ps.ipynb  data_exploration.ipynb  deepseek_example.ipynb  full_g_experiments.ipynb  gradients_analisys.ipynb  gram_tests.ipynb  visual-opt.ipynb
scripts/: ExperimentRunner.py  config.yaml  experiments_AU.sh  experiments_Aids.sh  experiments_Crime.sh  experiments_Heart.sh  experiments_MNIST.sh  experiments_Splice.sh  experiments_Student.sh  experiments_aniso.sh  experiments_corr_aniso.sh  experiments_iso.sh  experiments_synth.sh  pipeline.py  scale_invariance_check.py  update_config.py
scripts/configs/: config_Splice.yaml  config_Synth.yaml
scripts/results/: AU_check.py
src/: AdagramAdam.py  AdagramBase.py  AdagramPS.py  AdagramSVD.py  AdagramVanilla.py  AdamAdagram.py  FullAdagrad.py  Kate.py  adaGram.py  adagram_base.py  adagram_fixed_rank.py  adagram_project_splitting.py  adagram_projector_splitting.py  adagram_vanila.py  adagram_vanilla.py  diagonal.py  fullMatrix.py  full_G.py  full_matrix.py  grad_descent.py  kate.py  shampoo.py  torch_adagrad.py
src/adagram_optimizers/: AdaGramSqrt.py  AdaGram_eq.py  AdagramAdam.py  AdagramBase.py  AdagramPS.py  AdagramSVD.py  AdagramSqrtPS.py  (+9 more)
tests/: Lemma_tests.py  PS_tests.py  optimizers_tests.py  test_Lemma.py  test_optimizers.py
(+24 files in other folders)
